bug_report/tidb_bug_report/23943.txt
ID: 23943
Title: Can't build master branch on Apple Silicon (arm64/AArch64-Apple-Darwin)  
Description:
## Bug Report

Please answer these questions before submitting your issue. Thanks!

### 1. Minimal reproduce step (Required)
1. Clone the repo
2. make

<!-- a step by step guide for reproducing the bug. -->

### 2. What did you expect to see? (Required)
Builds successfully.

### 3. What did you see instead (Required)
```
CGO_ENABLED=1 GO111MODULE=on go build  -tags codes  -ldflags '-X "github.com/pingcap/parser/mysql.TiDBReleaseVersion=v4.0.0-alpha-4397-g94f6d89f3" -X "github.com/pingcap/tidb/util/versioninfo.TiDBBuildTS=2021-04-11 10:47:07" -X "github.com/pingcap/tidb/util/versioninfo.TiDBGitHash=94f6d89f38a4ad413ac56b860cdb13a725d6df88" -X "github.com/pingcap/tidb/util/versioninfo.TiDBGitBranch=master" -X "github.com/pingcap/tidb/util/versioninfo.TiDBEdition=Community" ' -o bin/tidb-server tidb-server/main.go
# github.com/shirou/gopsutil/cpu
../../../pkg/mod/github.com/shirou/gopsutil@v3.21.2+incompatible/cpu/cpu_darwin_cgo.go:13:5: error: 'TARGET_OS_MAC' is not defined, evaluates to 0 [-Werror,-Wundef-prefix=TARGET_OS_]
#if TARGET_OS_MAC
    ^
1 error generated.
make: *** [server] Error 2
```
### 4. What is your TiDB version? (Required)
`master`
<!-- Paste the output of SELECT tidb_version() -->

### 5. Go env
```
GOHOSTARCH="arm64"
GOHOSTOS="darwin"
GOVERSION="go1.16.3"
CC="clang"
CXX="clang++"
CGO_ENABLED="1"
```

